Basic Next.js project
with:
    npx gitignore node

    npx create-next-app@latest . \
      --app \
      --empty \
      --eslint \
      --src-dir \
      --tailwind \
      --turbopack \
      --typescript \
      --use-npm

Co-authored-by: Anton <70934030+friendlyantz@users.noreply.github.com>

--- a/mise.toml
+++ b/mise.toml
@@ -7,10 +7,18 @@ description = "check all dependencies"
 depends = ["install", "check-tools"]
 run = "echo TODO: check goes here"
 
+[tasks.lint]
+description = "lint"
+run = "npm run lint"
+
+[tasks."build:next"]
+description = "build next app"
+run = "npm run build"
+
 [tasks.build]
 description = "build all the things"
-depends = ["check"]
-run = "echo TODO: build goes here"
+depends = ["check", "lint", "build:next"]
+run = "echo lint and build"
 
 [tasks.clean]
 description = "clean up"
