--- a/mise.toml
+++ b/mise.toml
@@ -1,6 +1,6 @@
 [tasks.install]
 description = "install all dependencies"
-run = "echo TODO: install goes here"
+run = "npm install"
 
 [tasks.check]
 description = "check all dependencies"
@@ -9,10 +9,12 @@ run = "echo TODO: check goes here"
 
 [tasks.lint]
 description = "lint"
+depends = ["install"]
 run = "npm run lint"
 
 [tasks."build:next"]
 description = "build next app"
+depends = ["install"]
 run = "npm run build"
 
 [tasks.build]
@@ -22,7 +24,11 @@ run = "echo lint and build"
 
 [tasks.clean]
 description = "clean up"
-run = "echo TODO: clean goes here"
+run = [
+  "echo cleaning 🧹",
+  "rm -rf .node",
+  "rm -rf node_modules",
+]
 
 [tools]
 node = "latest"
